<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rodafleets.rodadriver.SignUpActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_orange_small"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/welcome_text"
            style="@style/welcomeText"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:id="@+id/welcomeText"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/sign_up_first_name"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#303030"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textColor="#303030"
        android:hint="@string/sign_up_last_name"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:checkedButton="@+id/radioMale"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <RadioButton
            android:id="@+id/radioMale"
            android:button="@drawable/radio_selector"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#303030"
            android:text="@string/sign_up_male"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"/>
        <RadioButton
            android:id="@+id/radioFemale"
            android:button="@drawable/radio_selector"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_female"
            android:paddingLeft="10dp"
            android:layout_gravity="center_horizontal"/>
    </RadioGroup>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#303030"
        android:hint="@string/sign_up_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLength="10"/>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_next"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_background_purple"
        android:drawableRight="@drawable/arrow"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onSignUpCLick"/>

    <TextView
        android:id="@+id/existingDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_existing_driver"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn"
        android:layout_marginEnd="10dp"
        android:onClick="signIn" />

</android.support.constraint.ConstraintLayout>
