<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rodafleets.rodadriver.SignUpVerificationActivity">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sign_up_first_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#303030"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="#303030"
        android:hint="@string/sign_up_last_name"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <RadioButton
            android:id="@+id/radioMale"
            android:button="@drawable/radio"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#303030"
            android:text="@string/sign_up_male"
            android:paddingLeft="10dp" />
        <RadioButton
            android:id="@+id/radioFemale"
            android:button="@drawable/radio"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_female"
            android:paddingLeft="10dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="#303030"
        android:hint="@string/sign_up_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLength="10" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="#303030"
        android:hint="@string/sign_up_password"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/otpText"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/sign_up_otp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#303030"
        android:textSize="14sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintTop_toBottomOf="@id/otpText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/otp">

        <EditText
            android:id="@+id/otpDigit1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:background="@drawable/otp_txt_background_white"
            android:textColor="#303030"
            android:textSize="14sp"
            android:gravity="center_horizontal" />

        <EditText
            android:id="@+id/otpDigit2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#303030"
            android:textSize="14sp"
            android:background="@drawable/otp_txt_background_white"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/otpDigit3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#303030"
            android:textSize="14sp"
            android:background="@drawable/otp_txt_background_white"
            android:layout_marginRight="5dp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/otpDigit4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#303030"
            android:textSize="14sp"
            android:background="@drawable/otp_txt_background_white"
            android:gravity="center_horizontal"/>

    </LinearLayout>

    <TextView
        android:id="@+id/otpMessage"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/sign_up_otp_message"
        app:layout_constraintTop_toBottomOf="@+id/otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#303030"
        android:textSize="12sp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/vehicleDetailsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_vehicle_details"
        app:layout_constraintTop_toBottomOf="@+id/otpMessage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_background_purple"
        android:drawableRight="@drawable/arrow"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onVerifyOtpClick"/>

    <TextView
        android:id="@+id/existingDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_existing_driver"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/vehicleDetailsBtn"
        android:layout_marginEnd="10dp"
        android:onClick="signIn" />

</android.support.constraint.ConstraintLayout>