<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rodafleets.rodadriver.SignInActivity"
    android:id="@+id/constraintLayout">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_orange_small"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="130dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/logo"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/welcome_text"
            style="@style/welcomeText"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:id="@+id/welcomeText"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:progressDrawable="@drawable/loading"/>

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/sign_in_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#303030"
        android:textSize="14sp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:maxLength="10"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="#303030"
        android:hint="@string/sign_in_password"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_login"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        android:background="@drawable/btn_background_orange"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onSignInBtnClick" />

    <TextView
        android:id="@+id/newDriver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_new_driver"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn"
        android:layout_marginEnd="10dp"
        android:onClick="onSignUpClick" />


</android.support.constraint.ConstraintLayout>
